fixed spacing?

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -41,9 +41,16 @@
 @media screen and (max-width: 627px) {
   .card__image {
     height: 288px;
+    width: 288px;
   }
 
-  .card__titel {
-    max-width: 250px;
+  .card__title {
+    font-size: 16px;
+    line-height: 16px;
+    max-width: 235px;
+  }
+  .card__like-btn {
+    width: 20px;
+    height: 18px;
   }
 }
