--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -14,6 +14,13 @@
 
 @media screen and (max-width: 627px) {
   .cards__list {
-    grid-template-columns: repeat (auto-fit, 288px);
+    grid-template-columns: repeat(auto-fit, 288px);
+    gap: 20px;
+    margin: 0;
+    padding-bottom: 0;
+  }
+
+  .cards {
+    padding-bottom: 20px;
   }
 }
